fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
   margin-left: auto;
   background: rgba(233, 233, 233, 0.25);
   backdrop-filter: blur(5px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .input-box {
